code smell and integration test fixes